--- a/settings.json
+++ b/settings.json
@@ -1,27 +1,27 @@
 {    
      "Version": "3.5.0",
-     "namalu" : "DITTAZ",
-     "nomerlu": "6285156137901",
-     "namabot": "Amelia Botz",
-     "nomerbot": "6285859108597",
+     "namalu" : "KOKO•REY",
+     "nomerlu": "6285232604817",
+     "namabot": "KOKO Botz",
+     "nomerbot": "6285232604817",
      "gender" : "Female",
-     "copyright" : "Extream",
-     "namaDocument": "Amelia Botz",
-     "joinGcExtream": true,
+     "copyright" : "KOKO•REY",
+     "namaDocument": "KOKO Botz",
+     "joinGcExtream": false,
 
-     "publik": true,
+     "publik": false,
      "forwarding": false,
-     "Loading": false,
+     "Loading": true,
      "antitroli" : false,
      
      "autovn" : false,
      "autosticker" : false,
      "autorespon" : false,
      "autotyping" : false,
-     "autoread" : true,
+     "autoread" : false,
      "autoblockcmd" : false, 
-     "autobio" : true,
-     "autoLevel" : true,
+     "autobio" : false,
+     "autoLevel" : false,
      "AutoClearChat": true,
      "totalForward" : 1000000,
      "explain": false,
@@ -52,14 +52,14 @@
      },
      
      "setPrefix": {
-     "prefix": "!",
+     "prefix": ".",
      "multi": true,
      "onepref" : false,
      "nopref" : false
      },
                                                                                                                                                                                                                                    
      "setWelcome": {
-     "autoWelcome": false,
+     "autoWelcome": true,
      "welcomeType": "type3",
      "background": "https://tinyurl.com/yxvl8h3a"
      },    
